Fix path-editor not centered

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,12 @@
   margin-top: 5vh;
 }
 
+.name-div {
+  width: 12vw;
+  align-items: center;
+  text-align: center;
+}
+
 h1 {
   color: #4674cf;
   font-size: 300%;
